--- a/diseases-diseases.html
+++ b/diseases-diseases.html
@@ -627,29 +627,21 @@
 </header>
 
     <section id="content-section">
-
+        
         <section id="article-review">
-            <div>
-                <a href="./diseases-dog-diseases.html"><button id="dog-btn">Куче</button></a> 
-                или 
-                <a href="./diseases-cat-diseases.html"><button id="cat-btn">Коте</button></a>
-            </div>
             <div class="choose-message">Избери вид любимец</div>
-            <ol>
-                <li>Кучешка парвовироза</li>
-                <li>Кучешка коронавироза</li>
-                <li>Гана</li>
-                <li>Ерлихиоза</li>
-                <li>Дирофилариоза</li>
-                <li>Бълхи</li>
-                <li>Кърлежи</li>
-                <li>Цестодоза</li>
-                <li>Тумор на млечната жлеза</li>
-                <li>Лимфома</li>
-                <li>Бяс</li>
-            </ol>
+            <div>
+    <a href="./diseases-dog-diseases.html"><button id="dog-btn-clicked">Куче</button></a> 
+    или 
+    <a href="./diseases-cat-diseases.html"><button id="cat-btn">Коте</button></a>
+</div>
+<ol>
+    <li><a href="./diseases-dog-top-diseases.html">ТОП 10 заболявания, заради които посещавате ветеринар</a></li>
+    <li><a href="./diseases-dog-top-symptoms.html">ТОП 10 оплаквания (симптоми), заради които посещавате ветеринар</a></li>
+    <li><a href="./diseases-dog-all-diseases.html">Всички заболявания при кучетата</a></li>
+    <li><a href="./diseases-dog-all-symptoms.html">Всички оплаквания (симптоми) при кучетата</a></li>
+</ol>
         </section>
-
         
         <section id="main-content">
             <div id="content" class="content">
