DIC, Crypto, Mammary hyperplasia Diseases uploaded

--- a/src/diseases/cat/all-symptoms.html
+++ b/src/diseases/cat/all-symptoms.html
@@ -16,6 +16,155 @@
                 <div id="articleContent">
                     <div id="article-content--cats">
                         <h1>Всички оплаквания (симптоми) при кучетата</h1>
+
+                        <!-- <p>Изтечения от носа</p>
+                        <p>Кашлица</p>
+                        <p>Кихане</p>
+                        <p>Обратно кихане</p>
+                        <p>Хъркане</p>
+                        <p>Хрипове</p>
+                        <p>Диспнея</p>
+                        <p>Тахипнея</p>
+                        <p>Тежко дишане</p>
+                        <p>Затруднено дишане</p>
+                        <p>Дишане с отворена уста</p>
+                        <p>Задушаване</p>
+                        <p>Халитоза</p>
+                        <p>Слюноотделяне</p>
+                        <p>Дисфагия</p>
+                        <p>Анорексия/ хипорексия</p>
+                        <p>Полифагия</p>
+                        <p>Парорексия</p>
+                        <p>Пика</p>
+                        <p>Регургитация</p>
+                        <p>Повръщане</p>
+                        <p>Хематемеза</p>
+                        <p>Прекалено близане на муцуната</p>
+                        <p>Кръв във фекалиите/ Хематохезия</p>
+                        <p>Мелена</p>
+                        <p>Слуз във фекалиите</p>
+                        <p>Тенезъм и/или дисхезия</p>
+                        <p>Диария, остра</p>
+                        <p>Диария, хронична</p>
+                        <p>Запек</p>
+                        <p>Фекална инконтиненция</p>
+                        <p>Загуба на тегло</p>
+                        <p>Наддаване на тегло</p>
+                        <p>Асцит</p>
+                        <p>Коремна болка</p>
+                        <p>Уголемяване/разширяване на корема</p>
+                        <p>Жълтеница</p>
+                        <p>Метеоризъм</p>
+                        <p>Търкане на задницата в земята</p>
+                        <p>Синкоп</p>
+                        <p>Аномален артериален пулс</p>
+                        <p>Сърдечен шум</p>
+                        <p>Аритмия</p>
+                        <p>Тахикардия</p>
+                        <p>Брадикардия</p>
+                        <p>Хиповолемия</p>
+                        <p>Бледи лигавици</p>
+                        <p>Цианоза</p>
+                        <p>Студени крайници</p>
+                        <p>Оток на крайниците</p>
+                        <p>Непоносимост към физическо натоварване</p>
+                        <p>Запушване на уретрата</p>
+                        <p>Уринарна инконтиненция</p>
+                        <p>Дизурия, Странгурия, Полакиурия</p>
+                        <p>Хематурия</p>
+                        <p>Миризма от урината</p>
+                        <p>Полиурия и полидипсия</p>
+                        <p>Олигурия/ Анурия</p>
+                        <p>Пиурия</p>
+                        <p>Кристалурия</p>
+                        <p>Имуномедииран гломерулонефрит</p>
+                        <p>Протеинурия</p>
+                        <p>Вагинални изтечения</p>
+                        <p>Оток на вулвата</p>
+                        <p>Дистоция</p>
+                        <p>Продължително раждане</p>
+                        <p>Безплодие</p>
+                        <p>Гнездящо поведение</p>
+                        <p>Лактация</p>
+                        <p>Изтечения от пениса</p>
+                        <p>Оток на скротума</p>
+                        <p>Гърч</p>
+                        <p>Епилептичен статус</p>
+                        <p>Тремори</p>
+                        <p>Натискане на главата</p>
+                        <p>Дезориентация</p>
+                        <p>Атаксия</p>
+                        <p>Въртене в кръг</p>
+                        <p>Залитане</p>
+                        <p>Пареза</p>
+                        <p>Парализа</p>
+                        <p>Слабост в крайниците</p>
+                        <p>Мидриаза (разширени зеници)</p>
+                        <p>Миоза</p>
+                        <p>Неестествена походка</p>
+                        <p>Хиперактивност</p>
+                        <p>Загуба на съзнание</p>
+                        <p>Прекалено често прозяване</p>
+                        <p>Зачервени очи</p>
+                        <p>Изтечения от очите</p>
+                        <p>Замъглени очи</p>
+                        <p>Кривогледство</p>
+                        <p>Натискане на очите</p>
+                        <p>Екзофталм</p>
+                        <p>Енофталм</p>
+                        <p>Мидриаза</p>
+                        <p>Миоза</p>
+                        <p>Анизокория</p>
+                        <p>Загуба на зрение</p>
+                        <p>Епифора</p>
+                        <p>Изпадане на третия клепач</p>
+                        <p>Сърбеж по ушите</p>
+                        <p>Тръскане на главата</p>
+                        <p>Секрет в ушите</p>
+                        <p>Миризма от ушите</p>
+                        <p>Зачервяване на ушите</p>
+                        <p>Оток на ушите</p>
+                        <p>Болка в ушите</p>
+                        <p>Загуба на слух</p>
+                        <p>Накланяне на главата</p>
+                        <p>Хематом на ухото</p>
+                        <p>Люспене на ушите</p>
+                        <p>Сърбеж</p>
+                        <p>Алопеция</p>
+                        <p>Зачервяване на кожата</p>
+                        <p>Обрив</p>
+                        <p>Кожни були</p>
+                        <p>Суха кожа</p>
+                        <p>Мазна кожа</p>
+                        <p>Пърхот</p>
+                        <p>Струпеи по кожата</p>
+                        <p>Хиперпигментация</p>
+                        <p>Хиперкератоза</p>
+                        <p>Мехури по кожата</p>
+                        <p>Изтечение от кожната лезия</p>
+                        <p>Лошо състояние на козината</p>
+                        <p>Скованост</p>
+                        <p>Подути стави</p>
+                        <p>Мускулна атрофия</p>
+                        <p>Болка при движение</p>
+                        <p>Трудно ставане</p>
+                        <p>Отказ от скачане и изкачване</p>
+                        <p>Деформация на кости</p>
+                        <p>Куцота</p>
+                        <p>Намалена активност</p>
+                        <p>Мускулни тремори</p>
+                        <p>Кифоза</p>
+                        <p>Поза за политва</p>
+                        <p>Отпадналост</p>
+                        <p>Треска</p>
+                        <p>Треперене</p>
+                        <p>Депресия</p>
+                        <p>Тревожност</p>
+                        <p>Дехидратация</p>
+                        <p>Прекомерно падане на козина</p>
+                        <p>Внезапна смърт</p>
+                        <p>Лимфаденопатия</p>
+                        <p>Кървене</p> -->
                                               
                         <br>
                         <div class="other-article">
