--- a/src/diseases/cat/top-symptoms.html
+++ b/src/diseases/cat/top-symptoms.html
@@ -16,6 +16,42 @@
                 <div id="articleContent">
                     <div id="article-content--cats">
                         <h1>ТОП 10 оплаквания (симптоми), заради които посещавате ветеринар</h1>
+                        <h3>Топ 10 оплаквания (симптоми) при котката, заради които посещавате ветеринар</h3>
+                        <p>Като собственик на котка, може да бъде тревожно, когато вашият домашен любимец проявява признаци на заболяване или дискомфорт. Някои незначителни проблеми могат да се разрешат сами, но определени симптоми изискват незабавна ветеринарна намеса. Ето най-честите причини, поради които собствениците на котки посещават ветеринар:</p>
+                        <ol>
+                        <li>
+                        <p><strong>Диария</strong> Диарията може да бъде причинена от промяна в храната, инфекции (вирусни, бактериални или паразитни), хранителни алергии, стрес или по-сериозни заболявания като възпалително заболяване на червата (IBD). Ако диарията продължава повече от 24 часа, съдържа кръв или е съпроводена с отпадналост и липса на апетит, незабавно посетете ветеринар.</p>
+                        </li>
+                        <li>
+                        <p><strong>Повръщане</strong> Котките повръщат по различни причини &ndash; от козина в стомаха до по-сериозни състояния като отравяне, бъбречна недостатъчност или чужди тела в храносмилателния тракт. Честото повръщане, наличие на кръв или придружаващи симптоми като дехидратация изискват ветеринарен преглед.</p>
+                        </li>
+                        <li>
+                        <p><strong>Трудности при уриниране</strong> Котка, която се напъва без успех в котешката тоалетна, може да страда от инфекции на пикочните пътища, камъни в пикочния мехур или запушване на уретрата &ndash; животозастрашаващо състояние, особено при мъжките котки. Ако забележите, че котката Ви не може да уринира, веднага потърсете ветеринарна помощ.</p>
+                        </li>
+                        <li>
+                        <p><strong>Проблеми с кожата (сърбеж, рани, опадане на козината)</strong> Котките могат да страдат от кожни заболявания, причинени от алергии, паразити (като бълхи), бактериални или гъбични инфекции. Постоянното чесане, зачервявания, рани или загуба на козина са сигнали, че котката Ви се нуждае от ветеринарен преглед.</p>
+                        </li>
+                        <li>
+                        <p><strong>Загуба на апетит</strong> Котките са известни с това, че могат да бъдат капризни по отношение на храната, но внезапната загуба на апетит може да сигнализира за сериозен здравословен проблем &ndash; от зъбни заболявания до органна недостатъчност. Ако котката Ви не се храни повече от 24 часа, потърсете ветеринар.</p>
+                        </li>
+                        <li>
+                        <p><strong>Лош дъх (Халитоза)</strong> Прекомерно лошият дъх може да показва проблеми със зъбите и венците, хронични инфекции или дори системни заболявания като бъбречна недостатъчност или диабет. Редовната грижа за зъбите и профилактичните прегледи са ключови за здравето на котката.</p>
+                        </li>
+                        <li>
+                        <p><strong>Куцане или затруднено ходене</strong> Котките са майстори в прикриването на болка, така че ако забележите куцане, нежелание за скачане или промяна в походката, това може да се дължи на нараняване, артрит, неврологични заболявания или дори скрит абсцес. Ветеринарен преглед ще помогне да се установи причината.</p>
+                        </li>
+                        <li>
+                        <p><strong>Кашлица или затруднено дишане</strong> Котките не кашлят често, така че този симптом може да бъде признак на астма, инфекции на дихателните пътища, сърдечни заболявания или наличие на чуждо тяло в трахеята. Ако котката Ви диша затруднено, отворена уста или със свистене, потърсете спешна помощ.</p>
+                        </li>
+                        <li>
+                        <p><strong>Проблеми с ушите (чесане, клатене на главата, секрет)</strong> Ушните инфекции, акарите и алергиите могат да причинят дискомфорт и сърбеж в ушите на котката. Ако забележите тъмен секрет, лоша миризма или зачервяване, потърсете ветеринар за диагностика и лечение.</p>
+                        </li>
+                        <li>
+                        <p><strong>Промени в поведението (агресия, летаргия, прекомерна вокализация)</strong> Котката Ви внезапно е станала агресивна, прекалено тиха или постоянно мяука? Всяка рязка промяна в поведението може да бъде сигнал за болка, заболяване или стрес. Не пренебрегвайте тези симптоми и се консултирайте с ветеринар.</p>
+                        </li>
+                        </ol>
+                        <h3>Кога да посетите ветеринар?</h3>
+                        <p>Ако Вашата котка проявява някой от горните симптоми, най-добре е да се консултирате с ветеринар възможно най-скоро. Ранната диагностика и лечение могат да предотвратят усложнения и да осигурят по-добро качество на живот на вашия домашен любимец. Редовните профилактични прегледи и грижата за котката Ви ще помогнат да я поддържате здрава и щастлива.</p>
                                               
                         <br>
                         <div class="other-article">
