--- a/src/diseases/dog/top-diseases.html
+++ b/src/diseases/dog/top-diseases.html
@@ -36,7 +36,7 @@
                         <h2>6. Инфекции на пикочните пътища и камъни в пикочния мехур</h2>
                         <p>Инфекциите на пикочните пътища често се характеризират с често уриниране, затруднено уриниране, инциденти в дома и понякога кръв в урината. Камъните в пикочния мехур могат да причинят подобни симптоми и понякога изискват хирургична намеса. Тези инфекции обикновено са причинени от бактерии, докато камъните могат да се дължат на хранителен дисбаланс или генетична предразположеност. Ако забележите, че кучето Ви има проблем с уринирането, се свържете с ветеринар, за да може инфекцията да се овладее още в ранния етап.</p>
                         
-                        <h2> Пиометра</h2>
+                        <h2>7. Пиометра</h2>
                         <p>Пиометрата е заболяване при женските кучета, което предствлява събиране на гной в матката. Възниква не главно заради бактериална инфекция, но заради постоянните хормонални промени, които се случват при некастрираните животни. Най-честите признаци са отпадналост, отказ от храна и треска - симптоми, които се срещат и при много други заболявания! Пиометрата е животозастрашаващо състояние, което изисква незабавна ветернинарномедицинска намеса, затова ако забележите, че Вашето куче има някой от тези симптоми, се консултирайте с ветеринар.</p>
                         
                         <h2>8. Зъбен камък и възпаление на венците (гингивит)</h2>
