update first arrticle links

--- a/src/adjustment/dog/preparing.html
+++ b/src/adjustment/dog/preparing.html
@@ -99,11 +99,7 @@
                         пухкав приятел и да му осигури комфортна и любяща среда.</p>
                     <br>
                     <div class="other-article">
-                        <a href="./adjustment/dog/poisons.html">
-                            <div class="other-article-prev">
-                                &laquo; Предходна статия:
-                            </div>
-                        </a>
+                        <a style="visibility: hidden;"></a>
 
                         <a href="./adjustment/dog/poisons.html">
                             <div class="other-article-next">
