--- a/src/growth/dog/phases.html
+++ b/src/growth/dog/phases.html
@@ -79,9 +79,7 @@
                             спътници на своите стопани.</p>
 
                         <div class="other-article">
-                            <div class="other-article-prev">
-                                <a href="./growth/dog/senility.html">&laquo; Предходна статия:</a>
-                            </div>
+                            <a style="visibility: hidden;"></a>
 
                             <div class="other-article-next">
                                 <a href="./growth/dog/orphan.html">Следваща статия &raquo;</a>
