--- a/src/health-care/cat/which-vet.html
+++ b/src/health-care/cat/which-vet.html
@@ -65,11 +65,7 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./health-care/cat/first-aid.html">
-                            <div class="other-article-prev">
-                                &laquo; Предходна статия:
-                            </div>
-                        </a>
+                        <a style="visibility: hidden;"></a>
 
                         <a href="./health-care/cat/deworming.html">
                             <div class="other-article-next">
