--- a/src/how-take-care/dog/language.html
+++ b/src/how-take-care/dog/language.html
@@ -88,11 +88,7 @@
                         можете да откликнете на техните нужди и да реагирате правилно.</p>
 
                     <div class="other-article">
-                        <a href="../../nutrition/calculator-compare-foods.html">
-                            <div class="other-article-prev">
-                                &laquo; Предходна статия:
-                            </div>
-                        </a>
+                        <a style="visibility: hidden;"></a>
 
                         <a href="./how-take-care/dog/sleep.html">
                             <div class="other-article-next">
