--- a/src/what-for-you/cat/anatomy.html
+++ b/src/what-for-you/cat/anatomy.html
@@ -124,11 +124,7 @@
                         <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="before.html">
-                                <div class="other-article-prev">
-                                    &laquo; Предходна статия:
-                                </div>
-                            </a>
+                            <a style="visibility: hidden;"></a>
 
                             <a href="nature.html">
                                 <div class="other-article-next">
