--- a/src/what-for-you/dog/anatomy.html
+++ b/src/what-for-you/dog/anatomy.html
@@ -112,11 +112,7 @@
                             <br>
     
                             <div class="other-article">
-                                <a href="./what-for-you/dog/before.html">
-                                    <div class="other-article-prev">
-                                        &laquo; Предходна статия:
-                                    </div>
-                                </a>
+                                <a style="visibility: hidden;"></a>
 
                                 <a href="./what-for-you/dog/nature.html">
                                     <div class="other-article-next">
