--- a/src/adjustment/cat/preparing.html
+++ b/src/adjustment/cat/preparing.html
@@ -178,11 +178,7 @@
                         <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="./adjustment/cat/name.html">
-                                <div class="other-article-prev">
-                                    &laquo; Предходна статия:
-                                </div>
-                            </a>
+                            <a style="visibility: hidden;"></a>
 
                             <a href="./adjustment/cat/poisons.html">
                                 <div class="other-article-next">
