--- a/src/diseases/cat/top-diseases.html
+++ b/src/diseases/cat/top-diseases.html
@@ -53,11 +53,7 @@
 
                         <br>
                         <div class="other-article">
-                            <a href="./diseases-cat-all-symptoms.html">
-                                <div class="other-article-prev">
-                                    &laquo; Предходна статия:
-                                </div>
-                            </a>
+                            <a style="visibility: hidden;"></a>
 
                             <a href="./diseases-cat-top-symptoms.html">
                                 <div class="other-article-next">
