--- a/src/diseases/dog/top-diseases.html
+++ b/src/diseases/dog/top-diseases.html
@@ -52,11 +52,7 @@
 
                         <br>
                         <div class="other-article">
-                            <a href="./diseases-dog-all-symptoms.html">
-                                <div class="other-article-prev">
-                                    &laquo; Предходна статия:
-                                </div>
-                            </a>
+                            <a style="visibility: hidden;"></a>
 
                             <a href="./diseases-dog-top-symptoms.html">
                                 <div class="other-article-next">
