--- a/src/growth/cat/phases.html
+++ b/src/growth/cat/phases.html
@@ -126,11 +126,7 @@
 
                         <br>
                         <div class="other-article">
-                            <a href="./growth/cat/senility.html">
-                                <div class="other-article-prev">
-                                    &laquo; Предходна статия:
-                                </div>
-                            </a>
+                            <a style="visibility: hidden;"></a>
 
                             <a href="./growth/cat/orphan.html">
                                 <div class="other-article-next">
