--- a/src/health-care/dog/which-vet.html
+++ b/src/health-care/dog/which-vet.html
@@ -61,11 +61,7 @@
                         кабинет или клиника и да попитате дали могат да поемат Вашия случай.</p>
                     <br>
                     <div class="other-article">
-                        <a href="./health-care/dog/deworming.html">
-                            <div class="other-article-prev">
-                                &laquo; Предходна статия:
-                            </div>
-                        </a>
+                        <a style="visibility: hidden;"></a>
 
                         <a href="./health-care/dog/first-aid.html">
                             <div class="other-article-next">
