--- a/src/how-take-care/cat/language.html
+++ b/src/how-take-care/cat/language.html
@@ -188,11 +188,7 @@
                     да откликнете на техните нужди и да реагирате правилно.
 
                     <div class="other-article">
-                        <a href="../../nutrition/calculator-compare-foods.html">
-                            <div class="other-article-prev">
-                                &laquo; Предходна статия:
-                            </div>
-                        </a>
+                        <a style="visibility: hidden;"></a>
 
                         <a href="./how-take-care/cat/sleep.html">
                             <div class="other-article-next">
