link the questionear to the what is for you page

--- a/@layout/footer.html
+++ b/@layout/footer.html
@@ -80,6 +80,7 @@
         <script src="./rabies-validation-date.js"></script>
         <script src="./vaccination-cat.js"></script>
         <script src="./script.js"></script>
-        
+
+        <script src="./are-you-ready.js"></script>
     </body>
 </html>
