--- a/@layout/header.html
+++ b/@layout/header.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="./rabies-validation-date.css" />
     <link rel="stylesheet" href="./current-articles.css" />
     <link rel="stylesheet" href="./style.css" />
+
+
+    <link rel="stylesheet" href="./are-you-ready.css" />
+
      <!-- ICONS CDN FONTAWESOME -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
