--- a/@components/what-for-you-dog.html
+++ b/@components/what-for-you-dog.html
@@ -10,39 +10,56 @@
 <div class="choose-message">Избери вид любимец</div>
 <ol>
     <li>
-        <a href="./what-for-you/dog/anatomy.html"><span class="bold">Анатомия</span> на кучето</a>
+        <a href="./what-for-you/dog/anatomy.html">
+            <span class="bold">Анатомия</span> на кучето
+        </a>
     </li>
     <li>
-        <a href="./what-for-you/dog/nature.html"><span class="bold">Природа</span> на кучето</a>
+        <a href="./what-for-you/dog/nature.html">
+            <span class="bold">Природа</span> на кучето</a>
     </li>
     <li>
-        <a href="./what-for-you/dog/life-expectancy.html"><span class="bold">Продължителност</span> на живота на кучето</a>
+        <a href="./what-for-you/dog/life-expectancy.html">
+            <span class="bold">Продължителност</span> на живота на кучето</a>
     </li>
     <li>
         <a href="./what-for-you/dog/brief-history.html">Кратка история на кучето</a>
     </li>
     <li>
-        <a href="./what-for-you/dog/perks.html"><span class="bold">Предимствата</span> да имаш куче</a>
+        <a href="./what-for-you/dog/perks.html">
+            <span class="bold">Предимствата</span> да имаш куче</a>
     </li>
     <li>
-        <a href="./../are-you-ready/are-you-ready.html">Въпросник: <span class="bold">Готов ли си</span> за куче?</a>
+        <a href="./what-for-you/are-you-ready/are-you-ready.html">
+            Въпросник: <span class="bold">Готов ли си</span> за куче?
+        </a>
     </li>
+    <!-- 
     <li>
         <a href="./../breeds/dog-breed-selector.html">Въпросник: <span class="bold">Какво куче</span> да си взема?</a>
     </li>
     <li>
         <a href="./../breeds/dog-breeds.html">Библиотека с породи кучета</a>
     </li>
+     -->
     <li>
-        <a href="./what-for-you/dog/young-or-adult.html"><span class="bold">Малко кученце или пораснало</span> куче да взема</a>
+        <a href="./what-for-you/dog/young-or-adult.html">
+            <span class="bold">Малко кученце или пораснало</span> куче да взема
+        </a>
     </li>
     <li>
-        <a href="./what-for-you/dog/male-or-female.html"><span class="bold">Мъжко или женско</span> куче да взема</a>
+        <a href="./what-for-you/dog/male-or-female.html">
+            <span class="bold">Мъжко или женско</span> куче да взема
+        </a>
     </li>
     <li>
-        <a href="./what-for-you/dog/where.html"><span class="bold">Откъде</span> мога да се сдобия с куче?</a>
+        <a href="./what-for-you/dog/where.html">
+            <span class="bold">Откъде</span> мога да се сдобия с куче?
+        </a>
     </li>
     <li>
-        <a href="./what-for-you/dog/before.html"><span class="bold">Въпросник</span> (Контролен списък) преди да си взема куче</a>
+        <a href="./what-for-you/dog/before.html">
+            <span class="bold">Въпросник</span> (Контролен списък) преди да си взема куче
+        </a>
     </li>
 </ol>
