update link header

--- a/@components/adjustment-cat.html
+++ b/@components/adjustment-cat.html
@@ -1,9 +1,9 @@
 <div>
-    <a href="./adjustment/dog/adjustment.html">
+    <a href="./adjustment/dog/adjustment.html" style="text-decoration: none;">
         <button id="dog-btn">Куче</button>
     </a> 
     или 
-    <a href="./adjustment/cat/adjustment.html">
+    <a href="./adjustment/cat/adjustment.html" style="text-decoration: none;">
         <button id="cat-btn-clicked">Коте</button>
     </a>
 </div>
