--- a/@components/diseases-dog.html
+++ b/@components/diseases-dog.html
@@ -1,7 +1,11 @@
 <div>
-    <a href="./diseases/dog/diseases.html"><button id="dog-btn-clicked">Куче</button></a> 
+    <a href="./diseases/dog/diseases.html" style="text-decoration: none;">
+        <button id="dog-btn-clicked">Куче</button>
+    </a> 
     или 
-    <a href="./diseases/cat/diseases.html"><button id="cat-btn">Коте</button></a>
+    <a href="./diseases/cat/diseases.html" style="text-decoration: none;">
+        <button id="cat-btn">Коте</button>
+    </a>
 </div>
 <ol>
     <li><a href="./diseases-dog-top-diseases.html">ТОП 10 заболявания, заради които посещавате ветеринар</a></li>
