--- a/@components/growth-dog.html
+++ b/@components/growth-dog.html
@@ -1,9 +1,9 @@
 <div>
-    <a href="./growth/dog/growth.html">
+    <a href="./growth/dog/growth.html" style="text-decoration: none;">
         <button id="dog-btn-clicked">Куче</button>
     </a> 
     или 
-    <a href="./growth/cat/growth.html">
+    <a href="./growth/cat/growth.html" style="text-decoration: none;">
         <button id="cat-btn">Коте</button>
     </a>
 </div>
