--- a/@components/what-for-you-dog.html
+++ b/@components/what-for-you-dog.html
@@ -1,9 +1,9 @@
 <div>
-    <a href="./what-for-you/dog/what-for-you.html">
+    <a href="./what-for-you/dog/what-for-you.html" style="text-decoration: none;">
         <button id="dog-btn">Куче</button>
     </a> 
     или 
-    <a href="./what-for-you/cat/what-for-you.html">
+    <a href="./what-for-you/cat/what-for-you.html" style="text-decoration: none;">
         <button id="cat-btn-clicked">Коте</button>
     </a>
 </div>
