--- a/src/adjustment/dog/poisons.html
+++ b/src/adjustment/dog/poisons.html
@@ -1,7 +1,10 @@
 <!-- HEADER -->
 <include what="@@layout/header.html" var:title="Скритите отрови в дома"></include>
-<include what="@@layout/menu.html"></include>
-
+<include what="@@layout/menu.html">
+    <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
+    <span class="breadcrumb-link">  /  </span>
+    <a class="breadcrumb-link no-dec" href="./adjustment/adjustment.html">Приспособяване в новия дом</a>
+</include>
 
 <section id="content-section">
 
