--- a/@components/adjustment-dog.html
+++ b/@components/adjustment-dog.html
@@ -1,9 +1,9 @@
 <div>
-    <a href="./adjustment/dog/adjustment.html">
+    <a href="./adjustment/dog/adjustment.html" style="text-decoration: none;">
         <button id="dog-btn-clicked">Куче</button>
     </a>
     или
-    <a href="./adjustment/cat/adjustment.html">
+    <a href="./adjustment/cat/adjustment.html" style="text-decoration: none;">
         <button id="cat-btn">Коте</button>
     </a>
 </div>
