--- a/@components/diseases-cat.html
+++ b/@components/diseases-cat.html
@@ -1,7 +1,11 @@
 <div>
-    <a href="./diseases/dog/diseases.html"><button id="dog-btn">Куче</button></a>
+    <a href="./diseases/dog/diseases.html" style="text-decoration: none;">
+        <button id="dog-btn">Куче</button>
+    </a>
     или
-    <a href="./diseases/cat/diseases.html"><button id="cat-btn-clicked">Коте</button></a>
+    <a href="./diseases/cat/diseases.html" style="text-decoration: none;">
+        <button id="cat-btn-clicked">Коте</button>
+    </a>
 </div>
 <ol>
     <li><a href="./diseases-cat-top-diseases.html">ТОП 10 заболявания, заради които посещавате ветеринар</a></li>
