--- a/@components/growth-cat.html
+++ b/@components/growth-cat.html
@@ -1,7 +1,11 @@
 <div>
-    <a href="./growth/dog/growth.html"><button id="dog-btn-clicked">Куче</button></a> 
+    <a href="./growth/dog/growth.html" style="text-decoration: none;">
+        <button id="dog-btn-clicked">Куче</button>
+    </a> 
     или 
-    <a href="./growth/cat/growth.html"><button id="cat-btn">Коте</button></a>
+    <a href="./growth/cat/growth.html" style="text-decoration: none;">
+        <button id="cat-btn">Коте</button>
+    </a>
 </div>
 <ol>
     <li><a href="./growth/cat/phases.html">Фази на растеж</a></li>
