--- a/@components/health-care-cat.html
+++ b/@components/health-care-cat.html
@@ -1,7 +1,11 @@
 <div>
-    <a href="./health-care/dog/health-care.html"><button id="dog-btn">Куче</button></a>
+    <a href="./health-care/dog/health-care.html" style="text-decoration: none;">
+        <button id="dog-btn">Куче</button>
+    </a>
     или
-    <a href="./health-care/cat/health-care.html"><button id="cat-btn-clicked">Коте</button></a>
+    <a href="./health-care/cat/health-care.html" style="text-decoration: none;">
+        <button id="cat-btn-clicked">Коте</button>
+    </a>
 </div>
 <ol>
     <li><a href="./health-care/cat/which-vet.html">Избор на ветеринарен лекар</a></li>
