--- a/@components/how-take-care-cat.html
+++ b/@components/how-take-care-cat.html
@@ -1,7 +1,11 @@
 <div>
-    <a href="./how-take-care/dog/how-take-care.html"><button id="dog-btn">Куче</button></a> 
+    <a href="./how-take-care/dog/how-take-care.html" style="text-decoration: none;">
+        <button id="dog-btn">Куче</button>
+    </a>
     или 
-    <a href="./how-take-care/cat/how-take-care.html"><button id="cat-btn-clicked">Коте</button></a>
+    <a href="./how-take-care/cat/how-take-care.html" style="text-decoration: none;">
+        <button id="cat-btn-clicked">Коте</button>
+    </a>
 </div>
 <ol>
     <li><a href="./how-take-care/cat/language.html">Как общуват котките</a></li>
