--- a/@layout/menu.html
+++ b/@layout/menu.html
@@ -603,9 +603,7 @@
     </div>
 
     <div id="breadcrumb">
-        <div>
-            <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
-        </div>
+        {{{@child}}}
     </div>
 
     <div class="overlay-desktop"></div>
@@ -615,6 +613,4 @@
             <div id="myBarMobile" class="scroll-indicator-mobile"></div>
         </div>
     </div>
-
-
 </header>
