update header menu for group and development

--- a/src/growth/dog/male-or-female.html
+++ b/src/growth/dog/male-or-female.html
@@ -1,5 +1,9 @@
 <include what="@@layout/header.html" var:title="Мъжко или женско кученце имам?"></include>
-<include what="@@layout/menu.html"></include>
+<include what="@@layout/menu.html">
+    <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
+    <span class="breadcrumb-link">  /  </span>
+    <a class="breadcrumb-link no-dec" href="./growth/growth.html">Растеж и развитие</a>            
+</include>
 
 
     <div class="overlay-desktop"></div>
