--- a/growth-cat-male-or-female.html
+++ b/growth-cat-male-or-female.html
@@ -616,6 +616,10 @@
 
     <div id="breadcrumb">
         
+    <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
+    <span class="breadcrumb-link">  /  </span>
+    <a class="breadcrumb-link no-dec" href="./growth-growth.html">Растеж и развитие</a>        
+
     </div>
 
     <div class="overlay-desktop"></div>
