add top menu for the section content

--- a/src/how-take-care/cat/nails.html
+++ b/src/how-take-care/cat/nails.html
@@ -1,6 +1,10 @@
 <!-- HEADER -->
 <include what="@@layout/header.html" var:title="Как да се грижим за ноктите на котката?"></include>
-<include what="@@layout/menu.html"></include>
+<include what="@@layout/menu.html">
+    <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
+    <span class="breadcrumb-link">  /  </span>
+    <a class="breadcrumb-link no-dec" href="./how-take-care/how-take-care.html">Как да се грижа ?</a>    
+</include>
 
 <section id="content-section">
 
