--- a/src/what-for-you/cat/life-expectancy.html
+++ b/src/what-for-you/cat/life-expectancy.html
@@ -1,6 +1,10 @@
 <!-- HEADER -->
 <include what="@@layout/header.html" var:title="Продължителност на живота на котката"></include>
-<include what="@@layout/menu.html"></include>
+<include what="@@layout/menu.html">
+    <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
+    <span class="breadcrumb-link">  /  </span>
+    <a class="breadcrumb-link no-dec" href="./what-for-you/what-for-you.html">Как да се грижа ?</a>    
+</include>
 
 <section id="content-section">
 
