--- a/health-care-dog-vaccination.html
+++ b/health-care-dog-vaccination.html
@@ -616,6 +616,10 @@
 
     <div id="breadcrumb">
         
+    <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
+    <span class="breadcrumb-link">  /  </span>
+    <a class="breadcrumb-link no-dec" href="./health-care-health-care.html">Здравни грижи</a>                
+
     </div>
 
     <div class="overlay-desktop"></div>
