--- a/how-take-care-cat-cat-litter.html
+++ b/how-take-care-cat-cat-litter.html
@@ -616,6 +616,10 @@
 
     <div id="breadcrumb">
         
+    <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
+    <span class="breadcrumb-link">  /  </span>
+    <a class="breadcrumb-link no-dec" href="./how-take-care-how-take-care.html">Как да се грижа ?</a>
+
     </div>
 
     <div class="overlay-desktop"></div>
