--- a/what-for-you-cat-nature.html
+++ b/what-for-you-cat-nature.html
@@ -616,6 +616,10 @@
 
     <div id="breadcrumb">
         
+    <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
+    <span class="breadcrumb-link">  /  </span>
+    <a class="breadcrumb-link no-dec" href="./what-for-you-what-for-you.html">Как да се грижа ?</a>    
+
     </div>
 
     <div class="overlay-desktop"></div>
