--- a/@components/how-take-care-dog.html
+++ b/@components/how-take-care-dog.html
@@ -10,5 +10,5 @@
     <li><a href="./how-take-care/dog/fur.html">Грижа за козина</a></li>
     <li><a href="./how-take-care/dog/nails.html">Грижа за нокти</a></li>
     <li><a href="./how-take-care/dog/check-up.html">Профилактичен преглед</a></li>
-    <li><a href="../../nutrition/calculator-compare-foods.html">Сравни цените между видовете храни (калкулатор)</a></li>
+    <li><a href="./nutrition/calculator-compare-foods.html">Сравни цените между видовете храни (калкулатор)</a></li>
 </ol>
