--- a/diseases-circulatory-mmvd.html
+++ b/diseases-circulatory-mmvd.html
@@ -730,7 +730,7 @@
                     <h2>Какво да направите, ако подозирате, че кучето ви има миксоматозно заболяване на митралната клапа (МЗМК)?</h2>
                     <p>Ако забележите постоянна кашлица, затруднено дишане или необичайна умора, запишете час при ветеринар възможно най-скоро. Ранното диагностициране позволява по-добро лечение и по-дълъг, по-здравословен живот за вашето куче.</p>
                     
-                    <h2>В обобщение:</h2>
+                    <h2>В резюме:</h2>
                     <p>Миксоматозното заболяване на митралната клапа (МЗМК) е често срещано сърдечно заболяване при по-възрастни кучета от дребни породи. При него митралната клапа не може да се затваря плътно и това причинява изтичане на кръв обратно през клапата, което натоварва сърцето. Симптомите включват кашлица, умора и затруднено дишане. Диагнозата изисква ветеринарен преглед, често с рентген или ехокардиография. Въпреки че няма лечение, лекарства и промени в начина на живот помагат. Редовните ветеринарни прегледи са ключови за ранното откриване и управление на заболяването.</p>
                     <br>
 
