--- a/diseases-dog-all-diseases.html
+++ b/diseases-dog-all-diseases.html
@@ -689,7 +689,10 @@
                         <h2>Болести на ендокринната система</h2>
                         
                         <h2>Болести на кръвообращението</h2>
+                        <p><a href="./diseases-circulatory-pda.html">Отворен дуктус артериозус (ОДА)</a></p>
                         <p><a href="./diseases-circulatory-mmvd.html">Миксоматозно заболяване на митралната клапа (МЗМК)</a></p>
+                        <p><a href="./diseases-circulatory-dcm.html">Дилатативна кардиомиопатия (ДКМ)</a></p>
+                        <p><a href="./diseases-circulatory-chf.html">Застойна сърдечна недостатъчност (ЗСН)</a></p>
                         
                         <h2>Болести на дихателната система</h2>
                         <p><a href="./diseases-respiratory-brachycephalic-syndrome.html">Брахицефален синдром (БЦС)</a></p>
@@ -707,6 +710,7 @@
 
                         <h2>Болести на пикочо-половата система</h2>
                         <p><a href="./diseases-genitourinary-chronic-kidney-disease.html">Хронична бъбречна недостатъчност (ХБН)</a></p>
+                        <p><a href="./diseases-genitourinary-urinary-incontinence.html">Уринарна инконтиненция</a></p>
                         <p><a href="./diseases-genitourinary-cryptorchidism.html">Крипторхизъм</a></p>
                         <p><a href="./diseases-genitourinary-benign-prostatic-hyperplasia.html">Доброкачествена хиперплазия на простатата (ДХП)</a></p>
                         <p><a href="./diseases-genitourinary-prostatic-cysts.html">Киста на простатата</a></p>
