--- a/how-take-care-cat-nails.html
+++ b/how-take-care-cat-nails.html
@@ -651,7 +651,7 @@
     <li><a href="./how-take-care-cat-fur.html">Грижа за козина</a></li>
     <li><a href="./how-take-care-cat-nails.html">Грижа за нокти</a></li>
     <li><a href="./how-take-care-cat-check-up.html">Профилактичен преглед</a></li>
-    <li><a href="../..-nutrition-calculator-compare-foods.html">Сравни цените между видовете храни (калкулатор)</a></li>
+    <li><a href="./nutrition-calculator-compare-foods.html">Сравни цените между видовете храни (калкулатор)</a></li>
 </ol>
     </section>
 
