higlite sidebar menu item

--- a/@components/growth-dog.html
+++ b/@components/growth-dog.html
@@ -7,15 +7,66 @@
         <button id="cat-btn">Коте</button>
     </a>
 </div>
+
 <ol>
-    <li><a href="./growth/dog/phases.html">Фази на растеж</a></li>
-    <li><a href="./growth/dog/orphan.html">Грижа за осиротели кученца</a></li>
-    <li><a href="./growth/dog/male-or-female.html">Мъжко или женско кученце имам?</a></li>
-    <li><a href="./growth/dog/pet-years.html">Изчисляване на възрастта в "кучешки" години</a></li>
-    <li><a href="./growth/dog/estrous-cycle.html">Полов цикъл</a></li>
-    <li><a href="./growth/dog/breeding.html">Възпроизвеждане</a></li>
-    <li><a href="./growth/dog/pregnancy.html">Бременност</a></li>
-    <li><a href="./growth/dog/parturition.html">Раждане</a></li>
-    <li><a href="./growth/dog/castration.html">Кастрация</a></li>
-    <li><a href="./growth/dog/senility.html">Старост</a></li>
+    <li>
+        <a  data-href   = "./growth/dog/phases"
+            href        = "./growth/dog/phases.html">
+            Фази на растеж
+        </a>
+    </li>
+    <li>
+        <a  data-href   = "./growth/dog/orphan"
+            href        = "./growth/dog/orphan.html">
+            Грижа за осиротели кученца
+        </a>
+    </li>
+    <li>
+        <a  data-href   = "./growth/dog/male-or-female"
+            href        = "./growth/dog/male-or-female.html">
+            Мъжко или женско кученце имам?
+        </a>
+    </li>
+    <li>
+        <a  data-href   = "./growth/dog/pet-years"
+            href        = "./growth/dog/pet-years.html">
+            Изчисляване на възрастта в "кучешки" години
+        </a>
+    </li>
+    <li>
+        <a  data-href   = "./growth/dog/estrous-cycle"
+            href        = "./growth/dog/estrous-cycle.html">
+            Полов цикъл
+        </a>
+    </li>
+    <li>
+        <a  data-href   = "./growth/dog/breeding"
+            href        = "./growth/dog/breeding.html">
+            Възпроизвеждане
+        </a>
+    </li>
+    <li>
+        <a  data-href   = "./growth/dog/pregnancy"
+            href        = "./growth/dog/pregnancy.html">
+            Бременност
+        </a>
+    </li>
+    <li>
+        <a  data-href   = "./growth/dog/parturition"
+            href        = "./growth/dog/parturition.html">
+            Раждане
+        </a>
+    </li>
+    <li>
+        <a  data-href   = "./growth/dog/castration"
+            href        = "./growth/dog/castration.html">
+            Кастрация
+        </a>
+    </li>
+    <li>
+        <a  data-href   = "./growth/dog/senility"
+            href        = "./growth/dog/senility.html">
+            Старост
+        </a>
+    </li>
 </ol>
