--- a/@components/health-care-dog.html
+++ b/@components/health-care-dog.html
@@ -7,14 +7,60 @@
         <button id="cat-btn">Коте</button>
     </a>
 </div>
+
 <ol>
-    <li><a href="./health-care/dog/which-vet.html">Избор на ветеринарен лекар</a></li>
-    <li><a href="./health-care/dog/deworming.html">Обезпаразитяване</a></li>
-    <li><a href="./health-care/dog/vaccination.html">Ваксинации</a></li>
-    <li><a href="./health-care/dog/microchipping.html">Чипиране</a></li>
-    <li><a href="./health-care/dog/passport.html">Паспорт и документация</a></li>
-    <li><a href="./health-care/dog/vet-exam.html">Преглед при ветеринарен лекар</a></li>
-    <li><a href="./health-care/dog/first-aid.html">Аптечка и първа помощ</a></li>
-    <li><a href="./health-care/dog/tick.html">Кърлеж върху любимеца ми</a></li>
-    <li><a href="./health-care/dog/pills.html">Даване на таблетки през устата</a></li>
+    <li>
+        <a  href        = "./health-care/dog/which-vet.html" 
+            data-href   = "./health-care/dog/which-vet">
+            Избор на ветеринарен лекар
+        </a>
+    </li>
+    <li>
+        <a  href        = "./health-care/dog/deworming.html" 
+            data-href   = "./health-care/dog/deworming">
+            Обезпаразитяване
+        </a>
+    </li>
+    <li>
+        <a  href        = "./health-care/dog/vaccination.html" 
+            data-href   = "./health-care/dog/vaccination">
+            Ваксинации
+        </a>
+    </li>
+    <li>
+        <a  href        = "./health-care/dog/microchipping.html" 
+            data-href   = "./health-care/dog/microchipping">
+            Чипиране
+        </a>
+    </li>
+    <li>
+        <a  href        = "./health-care/dog/passport.html" 
+            data-href   = "./health-care/dog/passport">
+            Паспорт и документация
+        </a>
+    </li>
+    <li>
+        <a  href        = "./health-care/dog/vet-exam.html" 
+            data-href   = "./health-care/dog/vet-exam">
+            Преглед при ветеринарен лекар
+        </a>
+    </li>
+    <li>
+        <a  href        = "./health-care/dog/first-aid.html" 
+            data-href   = "./health-care/dog/first-aid">
+            Аптечка и първа помощ
+        </a>
+    </li>
+    <li>
+        <a  href        = "./health-care/dog/tick.html" 
+            data-href   = "./health-care/dog/tick">
+            Кърлеж върху любимеца ми
+        </a>
+    </li>
+    <li>
+        <a  href        = "./health-care/dog/pills.html" 
+            data-href   = "./health-care/dog/pills">
+            Даване на таблетки през устата
+        </a>
+    </li>
 </ol>
