--- a/src/adjustment/dog/name.html
+++ b/src/adjustment/dog/name.html
@@ -38,7 +38,7 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./adjustment/dog/poisons.html">
+                        <a href="./adjustment/dog/first-days.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
