--- a/src/how-take-care/how-take-care.html
+++ b/src/how-take-care/how-take-care.html
@@ -22,7 +22,7 @@
             <li>Грижа за козина</a>
             <li>Грижа за нокти</a>
             <li>Профилактичен преглед</a>
-            <li>Сравни цените между видовете храни (калкулатор)</a>
+            <!-- <li>Сравни цените между видовете храни (калкулатор)</a> -->
         </ol>
     </section>
 
