--- a/@components/what-for-you-cat.html
+++ b/@components/what-for-you-cat.html
@@ -8,57 +8,66 @@
     </a>
 </div>
 
-<div class="choose-message">Избери вид любимец</div>
 <ol>
     <li>
-        <a href="./what-for-you/cat/anatomy.html">
+        <a  data-href   = "./what-for-you/cat/anatomy"
+            href        = "./what-for-you/cat/anatomy.html">
             <span class="bold">Анатомия</span> на котката
         </a>
     </li>
     <li>
-        <a href="./what-for-you/cat/nature.html">
+        <a  data-href   = "./what-for-you/cat/nature"
+            href        = "./what-for-you/cat/nature.html">
             <span class="bold">Природа</span> на котката
         </a>
     </li>
     <li>
-        <a href="./what-for-you/cat/life-expectancy.html">
+        <a  data-href   = "./what-for-you/cat/life-expectancy"
+            href        = "./what-for-you/cat/life-expectancy.html">
             <span class="bold">Продължителност</span> на живота на котката
         </a>
     </li>
     <li>
-        <a href="./what-for-you/cat/brief-history.html">
+        <a  data-href   = "./what-for-you/cat/brief-history"
+            href        = "./what-for-you/cat/brief-history.html">
             Кратка история на котката
         </a>
     </li>
     <li>
-        <a href="./what-for-you/cat/perks.html">
+        <a  data-href   = "./what-for-you/cat/perks"
+            href        = "./what-for-you/cat/perks.html">
             <span class="bold">Предимствата</span> да имаш котка
         </a>
     </li>
     <li>
-        <a href="./what-for-you/are-you-ready-cat/are-you-ready.html">
+        <a  data-href   = "./what-for-you/are-you-ready-cat/are-you-ready"
+            href        = "./what-for-you/are-you-ready-cat/are-you-ready.html">
             Въпросник: <span class="bold">Готов ли си</span> за котка?
         </a>
     </li>
     <!-- <li><a href="../breeds/cat-breeds.html">Библиотека с породи котки</a></li> -->
 
     <li>
-        <a href="./what-for-you/cat/young-or-adult.html">
+        <a  data-href   = "./what-for-you/cat/young-or-adult"
+            href        = "./what-for-you/cat/young-or-adult.html">
             <span class="bold">Малко котенце или пораснала</span> котка да взема
         </a>
     </li>
     <li>
-        <a href="./what-for-you/cat/male-or-female.html">
+        <a  data-href   = "./what-for-you/cat/male-or-female"
+            href        = "./what-for-you/cat/male-or-female.html">
             <span class="bold">Мъжка или женска</span> котка да взема
         </a>
     </li>
     <li>
-        <a href="./what-for-you/cat/where.html">
+        <a  data-href   = "./what-for-you/cat/where"
+            href        = "./what-for-you/cat/where.html">
             <span class="bold">Откъде</span> мога да се сдобия с котка?
         </a>
     </li>
     <li>
-        <a href="./what-for-you/cat/before.html">
+        <a  data-href   = "./what-for-you/cat/before"
+            href        = "./what-for-you/cat/before.html">
             <span class="bold">Въпросник</span> (Контролен списък) преди да си взема котка
         </a>
     </li>
