NI gastroenteritis Disease

--- a/src/diseases/dog/all-diseases.html
+++ b/src/diseases/dog/all-diseases.html
@@ -59,7 +59,9 @@
                         <p><a href="./diseases-respiratory-brachycephalic-syndrome.html">Брахицефален синдром (БЦС)</a></p>
                         
                         <h2>Болести на храносмилателната система</h2>
+                        <p><a href="./diseases-gastrointestinal-stomatitis.html">Стоматит</a></p>
                         <p><a href="./diseases-gastrointestinal-persistent-deciduous-teeth.html">Задържан млечен зъб</a></p>
+                        <p><a href="./diseases-gastrointestinal-non-infectious-gastroenteritis-and-colitis.html">Неинфекциозен гастроентерит и колит</a></p>
                         <p><a href="./diseases-gastrointestinal-inguinal-hernia.html">Ингвинална херния</a></p>
                         <p><a href="./diseases-gastrointestinal-umbilical-hernia.html">Пъпна херния</a></p>
                         <p><a href="./diseases-gastrointestinal-diaphragmatic-hernia.html">Диафрагмална херния</a></p>
